--- a/src/styles/Library.module.css
+++ b/src/styles/Library.module.css
@@ -1,31 +1,59 @@
+/* styles/Library.module.css */
 .cardContainer {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between; /* Distributes cards evenly on each line */
-  }
-  
-  .card {
-    background-color: #f7f7f7;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s, box-shadow 0.2s;
-    text-decoration: none;
-    color: #333;
-    flex: 0 0 calc(33.33% - 20px); /* Each card takes up 33.33% of the container width */
-  }
-  
-  .card:hover {
-    transform: scale(1.03);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .card h2 {
-    margin-top: 0;
-  }
-  
-  
-  
-  
-  
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Display 3 cards per row */
+  gap: 20px;
+}
+
+.card {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s, box-shadow 0.2s;
+  text-decoration: none;
+  color: #333;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.card h2 {
+  margin-top: 0;
+}
+
+/* Add a z-index value to the Chatbot container */
+.chatbot-container {
+  background-color: #fff; /* Background color */
+  border-radius: 8px; /* Rounded corners */
+  padding: 16px; /* Padding inside the container */
+  width: 300px; /* Adjust the width as needed */
+  position: fixed; /* Fixed position */
+  right: 20px; /* Adjust the position as needed */
+  top: 60px; /* Adjust the position as needed */
+  z-index: 1000; /* A higher z-index value to appear above the header */
+}
+
+/* styles/Library.module.css */
+.showAllButton {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.showAllButton button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 16px;
+  width: auto; /* Allow the button to expand to fit content */
+}
+
+.showAllButton button:hover {
+  background-color: #0056b3;
+}
