--- a/src/styles/Library.module.css
+++ b/src/styles/Library.module.css
@@ -57,3 +57,14 @@
 .showAllButton button:hover {
   background-color: #0056b3;
 }
+
+.image-container {
+  margin: 2rem auto;
+  display: flex;
+  justify-content: center;
+}
+
+.support-image {
+  max-width: 100%;
+  height: auto;
+}
