--- a/src/styles/support.module.css
+++ b/src/styles/support.module.css
@@ -33,3 +33,19 @@
   font-weight: bold;
   cursor: pointer;
 }
+
+/* Add styling for the support image here */
+.support-image {
+  margin: 2rem auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* Add styling for the GIF animation here */
+.animation-image {
+  display: block;
+  margin: 2rem auto;
+  max-width: 100%;
+  height: auto;
+}
